app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:252078852689:certificate/423a3f75-f306-4a2f-aa9d-df83851368a2
    external-dns.alpha.kubernetes.io/set-identifier: my-app-ingress
    external-dns.alpha.kubernetes.io/aws-evaluate-target-health: 'true'
    external-dns.alpha.kubernetes.io/aws-failover: PRIMARY
    external-dns.alpha.kubernetes.io/aws-health-check-id: 6e79152b-08e8-4ca3-846e-82ab92171e05
    alb.ingress.kubernetes.io/group.name: sandboxnew
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=false
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb   
spec:
  rules:
  - host: "myapp.visakhkk.cf"
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-app
            port:
              number: 80
